<resources>
    <string name="app_name">Colorful Shapes</string>
    <string name="play">JUGAR</string>
    <string name="exit">SALIR</string>
    <string name="logo">Colorful Shapes logo</string>
    <string name="little_shapes">Imagen de las formas felices</string>
    <string name="txtResultados">RESULTADOS</string>
    <string name="txtNombre">"Jugador/a: "</string>
    <string name="txtAciertos">"Aciertos: "</string>
    <string name="txtErrores">"Errores: "</string>
    <string name="txtTiempo">"Tiempo: "</string>
    <string name="playAgain">Volver a\nJUGAR</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="nivel_3">Nivel ¿?</string>
    <string name="nivel_2">Nivel 2</string>
    <string name="nivel_1">Nivel 1</string>
    <string name="dificultad">DIFICULTAD</string>
    <string name="rondas">RONDAS:</string>
    <string name="edad">EDAD:</string>
    <string name="nombre">NOMBRE:</string>
    <string name="inicio">INICIO</string>
    <string name="jugar_boton" />
    <string name="jugar" />
    <string name="salir" />
    <string name="estats" />
</resources>