<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="6"
    android:padding="40dp"
    android:background="@drawable/bluebackground"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/txtResultados"
        android:textColor="@color/white"
        android:textSize="80sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_marginStart="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNombre"
            android:textColor="@color/white"
            android:textSize="65sp" />

        <TextView
            android:id="@+id/labelJugador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="65sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginStart="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtAciertos"
            android:textColor="@color/white"
            android:textSize="65sp" />

        <TextView
            android:id="@+id/labelAciertos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="65sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_marginStart="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtErrores"
            android:textColor="@color/white"
            android:textSize="65sp" />

        <TextView
            android:id="@+id/labelErrores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="65sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_marginStart="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="VisualLintBounds">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTiempo"
            android:textColor="@color/blanco"
            android:textSize="65sp" />

        <TextView
            android:id="@+id/labelTiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="65sp" />

    </LinearLayout>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_gravity="start|center"
        android:contentDescription="@string/little_shapes"
        android:src="@drawable/little_shapes"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_gravity="end|top"
        android:background="@drawable/boton_rojo"
        android:text="@string/exit"
        android:textSize="50sp"
        app:backgroundTint="@null"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/btnTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_gravity="end|center"
        android:background="@drawable/boton_verde"
        android:text="@string/playAgain"
        android:textSize="66sp"
        app:backgroundTint="@null"
        tools:ignore="VisualLintBounds" />

</GridLayout>